--- a/package.json
+++ b/package.json
@@ -5,35 +5,36 @@
     "main": "server.js",
     "author": "Samuel James",
     "scripts": {
-        "launch": "killall -9 node && npm run build && npm start",
+        "launch": "killall -9 node; npm run build && npm start",
         "build": "webpack"
     },
     "dependencies": {
-        "axios": "^0.16.2",
-        "body-parser": "^1.5.2",
-        "bootstrap": "^4.0.0-beta.2",
-        "express": "~4.7.2",
-        "method-override": "~2.1.2",
-        "mongoose": "~4.0.0",
+        "axios": "^0.18.0",
+        "body-parser": "^1.18.3",
+        "bootstrap": "^4.1.3",
+        "express": "~4.16.3",
+        "method-override": "~3.0.0",
+        "mongoose": "~5.2.7",
         "morgan": "^1.9.0",
         "node-sass": "^4.9.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.11",
-        "vue-axios": "^2.0.2",
+        "vue": "^2.5.17",
+        "vue-axios": "^2.1.3",
         "vue-loading-overlay": "^2.1.0"
     },
     "devDependencies": {
-        "prettier": "^1.9.2",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-env": "^1.6.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-stage-3": "^6.24.1",
-        "cross-env": "^5.0.5",
-        "css-loader": "^0.28.7",
-        "file-loader": "^1.1.4",
-        "vue-loader": "^13.0.5",
-        "vue-template-compiler": "^2.4.4",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1"
+        "cross-env": "^5.2.0",
+        "css-loader": "^1.0.0",
+        "file-loader": "^1.1.11",
+        "prettier": "^1.14.1",
+        "vue-loader": "^15.3.0",
+        "vue-template-compiler": "^2.5.17",
+        "webpack": "^4.16.5",
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.5"
     }
 }
