Update Access-Control-Allow-Origin to use external host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       args:
         API_HOST: http://localhost:8080
     environment:
+      FRONTEND_HOST: http://localhost:8080
       APP_PORT: 4000
       DB_HOST: mongodb
       DB_NAME: todos
