--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "Samuel James",
     "scripts": {
         "launch": "killall -9 node; npm run build && npm start",
-        "build": "webpack"
+        "build": "webpack --mode=production"
     },
     "dependencies": {
         "axios": "^0.18.0",
