--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,19 @@ services:
     build:
       context: .
       args:
-        API_HOST: http://localhost:8080
-    environment:
-      FRONTEND_HOST: http://localhost:8080
-      APP_PORT: 4000
-      DB_HOST: mongodb
-      DB_NAME: todos
+        API_HOST: http://server:4000
+    env_file: .env
     ports:
       - 8080:4000
     links:
       - mongodb
+      - selenium
   mongodb:
     image: mongo
+  selenium:
+    image: selenium/standalone-chrome-debug:latest
+    environment:
+      - VNC_NO_PASSWORD=1
+    ports:
+      - 4444 # Selenium server
+      - 5900:5900 # VNC server bound to port 5900. Please make sure your localhost's 5900 is available.
