--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "author": "Samuel James",
     "scripts": {
         "launch": "killall -9 node; npm run build && npm start",
-        "build": "webpack --mode=production"
+        "build": "webpack --mode=production",
+        "test": "./node_modules/.bin/wdio wdio.conf.js --suite tests --verbose"
     },
     "dependencies": {
         "axios": "^0.18.0",
@@ -15,12 +16,17 @@
         "express": "~4.16.3",
         "method-override": "~3.0.0",
         "mongoose": "~5.2.7",
-        "morgan": "^1.9.0",
+        "morgan": "^1.9.1",
         "node-sass": "^4.9.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-axios": "^2.1.3",
-        "vue-loading-overlay": "^2.1.0"
+        "vue-loading-overlay": "^2.1.0",
+        "wdio-jasmine-framework": "^0.3.5",
+        "wdio-spec-reporter": "^0.1.5",
+        "wdio-screenshot": "^0.6.0",
+        "webdriverio": "^4.13.2",
+        "selenium-standalone": "^6.15.1"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
@@ -35,6 +41,6 @@
         "vue-template-compiler": "^2.5.17",
         "webpack": "^4.16.5",
         "webpack-cli": "^3.1.0",
-        "webpack-dev-server": "^3.1.5"
+        "webpack-dev-server": "^3.1.14"
     }
 }
